# ostrich-egg

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: .gitignore  CLAUDE.md  next.config.ts  package.json  requirements.txt  vercel.json
demo/api/: suppress-data.py
demo/src/app/: layout.tsx  page.tsx
dependencies/: requirements.test.txt  requirements.txt
docs/examples/: public_health_reporting.md
ostrich-egg/: config.py  engine.py  utils.py
ostrich-egg/connectors/: __init__.py  base.py  file_system.py  s3.py
ostrich_egg/: config.py  engine.py  redaction_utils.py  utils.py
ostrich_egg/connectors/: __init__.py  base.py  file_system.py  s3.py
ostrich_egg/templates/: check_redacted_context.sql  redaction_context_view.sql  update_output_from_redaction_context.sql
schemas/: config_schema.json  generate.py
tests/: conftest.py  test_compound_threshold_expression.py  test_initial_metrics.py  test_join_expressions.py  test_mark_redaction.py  test_metric_expressions.py  test_multi_dimensional_redaction.py  test_public_health_example.py  test_redaction_reasons.py  test_s3_key.py  test_that_schema_is_updated.py
tests/data_inputs/: count_based.json  library_example.csv  multi-dimensional-revelation.json  public_health_config.yml  public_health_example.json  read_only_compound_population_example.csv  redaction_examples.json  redaction_order_config.yml  redaction_order_config_output.json  redaction_order_data.csv  redaction_outputs.json  test_joins_incidence.csv  test_joins_population.csv
tests/data_outputs/: library_example.csv  (+1 more)
